--- a/angular-src/src/app/component/login/login.component.html
+++ b/angular-src/src/app/component/login/login.component.html
@@ -1,1 +1,12 @@
-Login Page
+<h2>Login</h2>
+<form (submit)="onLoginSubmit()">
+    <div class="form-group">
+        <label>User Name</label>
+        <input type="text" class="form-control" [(ngModel)] = 'username' name ='username'/>
+    </div>
+    <div class="form-group">
+        <label>Password</label>
+        <input type="password" [(ngModel)] = 'password' name= 'password' class="form-control"/>
+    </div>
+    <input type="submit" value="Login" class="btn btn-primary">
+</form>
