--- a/angular-src/src/app/component/login/login.component.html
+++ b/angular-src/src/app/component/login/login.component.html
@@ -8,5 +8,6 @@
         <label>Password</label>
         <input type="password" [(ngModel)] = 'password' name= 'password' class="form-control"/>
     </div>
-    <input type="submit" value="Login" class="btn btn-primary">
+    <input type="submit" value="Login" class="btn btn-primary">    
 </form>
+<input type="button" value="Cancel" class="btn btn-secondary" (click)="cancelClicked()">
