--- a/angular-src/src/app/component/profile/profile.component.html
+++ b/angular-src/src/app/component/profile/profile.component.html
@@ -2,6 +2,6 @@
 <h2 class="page-header">{{user.name}}</h2>
 <ul class="list-group">
     <li class="list-group-item">User Name :: {{user.username}}</li>
-    <li class="list-group-item">Email :: {{user.Email}}</li>
+    <li class="list-group-item">Email :: {{user.email}}</li>
 </ul>
 </div>  
